# boxpacker

./: README.md
server/: .env  Cargo.toml  Rocket.toml
server/migrations/2020-03-06-200302_create_containers/: up.sql
server/migrations/2020-03-29-093802_add_items/: up.sql
server/migrations/2020-03-31-183844_with_timestamps/: down.sql  up.sql
server/src/: main.rs
server/src/routes/: containers.rs  items.rs  mod.rs
server/src/storage/: methods.rs  mod.rs  models.rs  schema.rs
server/src/storage/models/: container.rs  item.rs
ui/: .gitignore  bsconfig.json  index.html  nginx.dev.conf  package-lock.json  package.json
ui/src/: AppState.re  Boxes.re  Container.re  ContainersPanel.re  DeleteModal.re  Entity.re  EntityList.re  Index.re  InputBox.re  Item.re  ItemModal.re  Items.re  ItemsPanel.re  Modal.re  Theme.re  Types.re  Utils.re  Xhr.re
