[package]
name = "boxpacker_server"
version = "0.1.0"
authors = ["Matt Thorning <matthewthorning@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4.3"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["serve", "json", "diesel_postgres_pool"]
